<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_ESSAlarm" Id="{7cf4bf56-9560-4e49-afbe-1511a605e206}">
    <Declaration><![CDATA[
TYPE ST_ESSAlarm :
STRUCT
    bAlarmSet: BOOL;
    bAlarmReset: BOOL;
    nStatusLED: E_ESSLedFunction;
    nWarningLED: E_ESSLedFunction;
    nEmergencyLED: E_ESSLedFunction;
    nAcknowledgeLED: E_ESSLedFunction;
    nErrorID: INT;
    sErrorMsg: STRING;
    bAlarmActive: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>
