<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <DUT Name="DUT_TerminalError" Id="{2ccffcb8-5781-4ee4-ba1b-3de4aaf3a3ab}">
    <Declaration><![CDATA[TYPE DUT_TerminalError :
STRUCT
	//Error system related
	iTerminalID : INT;					//The ID of the terminal
	Error_ID : ULINT := 0;				//Id for the Error entry
	Error_State : DUT_ErrorState;		//The state of the error
	
	//Error related
	nDateTimeOn : ULINT;				//Date and time when the error occured. Raw data
	sDateTimeOn : STRING(24);			//Date and time when the error occured. Readable format
	nDateTimeOff : ULINT;				//Date and time when the error disapeared. Raw data
	sDateTimeOff : STRING(24);			//Date and time when the error disapeared. Readable format
	bWcState : BOOL;					//WcState variable of the terminal
	uiInfoDataState : UINT;				//InfoData.State variable of the terminal
	sErrorMessage : STRING (128);		//Error message corresponding to WcState and InfoData.State
	ErrorType : INT; 					//Error types (priorities) need to be developed
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>